master
		- Java API is broken for now ....
		- New assetsController property to override the assets class in RoutesHelper. Needed when a custom Asset controller is used by the app.
		- Added hasher id to PasswordInfo
		- Added support for registering multiple PasswordHashers to allow upgrading the hashing algorithm.
		- Introduced Identity trait. SocialUser now implements it (this will allow developers to return their own user class from UserService)
2.0.7	- 2012-11-25		
		- Added password change functionality
		- Changed SecureSocial.currentUser/userFromSession methods to support websockets (thanks @KimStevel for catching this)
		- Use HTTPS for avatar URL in the Facebook provider (thanks @chazmcgarvey)
		- Added documentation for password plugins
		- Added base class for Java based password hashers: BasePasswordHasher
		- Added PasswordValidator to allow customization of password rules/strength
		- Added DefaultPasswordValidator that enforces the length of passwords
		- Fixed a RuntimeException in the github provider (thanks @chazmcgarvey)
		- Changes to TwitterProvider: use of API 1.1 and https for the image avatar (thanks @chazmcgarvey)
2.0.6	- 2012-11-16		
		- Fixed a problem where plugins were not being registered when Play recompiled the app
		- Added a scheduled task to delete expired signup/password reset tokens
		- Added tokenDuration and tokenDeleteInterval properties for userpass
		- Changed findByEmail to findByEmailAndProvider in UserService to make it clearer that both fields must match
		- Fixed bug: OAuth1Provider was clearing the session at login time (thanks @chazmcgarvey)
2.0.5   - 2012-11-14
		- Simplified installation by providing an ivy style repository
		- Updated installation steps in the user guide
		- Added a change log page to the docs
		- Changed the assets directory for SecureSocial to avoid conflicts with apps using it
		- Added Bootstrap to demo apps
2.0.4   - 2012-11-11