@@ -1,6 +1,11 @@
 master
-		- Java API is broken for now ....
-		- New assetsController property to override the assets class in RoutesHelper. Needed when a custom Asset controller is used by the app.
+		- Fixed: PasswordValidator was not being used in password reset
+		- Fixed: When a token is expired the user is properly redirected to the sign up or reset pages now
+		- Added enableTokenJob property to enable/disable the background job
+		- Fixed method typo AuthenticationMethod: toScala.
+		- Right http codes are returned for ajax calls now (scala api, java needs fixing yet)
+		- Java API is broken for now (sorry!)
+		- New assetsController property to override the assets class in RoutesHelper. Needed when a custom Asset controller is used by the app.  
 		- Added hasher id to PasswordInfo
 		- Added support for registering multiple PasswordHashers to allow upgrading the hashing algorithm.
 		- Introduced Identity trait. SocialUser now implements it (this will allow developers to return their own user class from UserService)
